# social-hub

./: .gitignore  README.md  package.json
.github/workflows/: build-windows.yml
scripts/: build-windows.mjs  tauri.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
