[package]
name = "social-hub"
version = "0.2.0"
description = "SNS unified desktop viewer"
authors = ["Social Hub"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "social_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["unstable"] }
